--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
           <div id="escrito" class="d-none d-md-block">
             <div class="d-none d-md-block" data-aos="fade-right" data-aos-duration="1000">
-              <h3 class="title">Hola</h3>
+              <h3 class="title">¡Hola!</h3>
             </div>
 
             <p id="typed" class="d-inline text-justify text-info"></p>
