--- a/acerca.html
+++ b/acerca.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="d-none col-5 d-flex justify-content-center align-items-center plash">
-                <img id="img-control" class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
+                <img id="logo_acerca" class="img-fluid" src="img/logo.svg" alt="logo Coomutranstur">
             </div>
 
             <div class="col-7 col-xl-6 pr-4">
