--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <section id="biodiversidad">
       <div class="container-fluid p-0">
         <div class="d-flex justify-content-center">
-          <img class="cabecita2" src="img/biodiversidad.png" alt="">
+          <img class="cabecita2 d-none d-sm-block" src="img/biodiversidad.png" alt="">
         </div>
         <div class="row text-center justify-content-around">
 
@@ -221,7 +221,7 @@
     <section id="gastronomia">
       <div id="parallax1"></div>
       <div class="d-flex justify-content-center justify-content-center">
-        <img class="cabecita2" src="img/gastronomia.png" alt="">
+        <img class="cabecita2 d-none d-sm-block" src="img/gastronomia.png" alt="">
       </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
 
@@ -252,7 +252,7 @@
     <section id="cultura" class="">
       <div id="parallax2"></div>
       <div class="d-flex justify-content-center justify-content-center">
-        <img class="cabecita2" src="img/cultura.png" alt="">
+        <img class="cabecita2 d-none d-sm-block" src="img/cultura.png" alt="">
       </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
 
@@ -432,7 +432,7 @@
       new Typed('#typed', {
         strings: [texto + '<br><br>' + lista],
         startDelay: 1500,
-        typeSpeed: 40,
+        typeSpeed: 20,
         cursorChar: '_',
         smartBackspace: false,
         loop: false,
