--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <div class="col">
                 <a class="navbar-brand ml-3 d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
                 <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+
               </div>
               <div class="col d-none d-sm-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -420,6 +421,13 @@
   <script src="js/in-view.min.js"></script>
   <script src="js/app.js"></script>
 
+  <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en,fr,pt', layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script>
     AOS.init({
       once: true
@@ -441,6 +449,7 @@
 
 
   </script>
+
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
