--- a/acerca.html
+++ b/acerca.html
@@ -70,21 +70,26 @@
                 <!-- texto main -->
     </section>
 
+    <section id="nosotros" class="container-fluid d-flex align-items-center justify-content-center">
+
+        <div id="scene">
+            <div data-depth="1" data-hover-only> <img id="logo-acerca" src="img/logo.png" alt=""></div>
+        </div>
+
+    </section>
+
 
     <!-- Acerca de  -->
-    <section class="" id="nosotros">
-        <div class="row mt-4 align-items-center">
+    <section class="container-fluid">
+        <div class="row mt-4">
 
-            <div class="col-12 mb-3 text-center title font-weight-bold">
+            <div class="col-12 mb-3 text-center title2 font-weight-bold">
                 <p class="text-uppercase">¿Quines somos?</p>
             </div>
 
-            <div class="d-none col-5 d-flex justify-content-center align-items-center plash">
-                <img id="logo_acerca" class="img-fluid" src="img/logo.svg" alt="logo Coomutranstur">
-            </div>
-
-            <div class="col-7 col-xl-6 pr-4">
-                <p class="text-justify green">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
+            <div class="col-12">
+                <p class="text-justify green">Somos una organización sin ánimo de lucro, de interés social,
+                    perteneciente al
                     sector
                     de la economía
                     solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
@@ -96,17 +101,14 @@
                     personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su
                     trabajo.
                     Establecido el decreto 4588 de 2006.</p>
-
             </div>
 
-            <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
-            </div>
-            <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
-            </div>
-        </div>
-        
-        <div class="row mt-3 pb-3 pt-2 bg-dark">
-            <div class="col" data-aos="fade-right">
+            <div class="col-4 green">
+
+                <div class="d-flex justify-content-center align-items-center">
+                    <img id="logo_acerca" class="img-fluid" src="img/logo.svg" alt="logo Coomutranstur">
+                </div>
+                <br>
                 <h3 class="title text-center">Visión</h3>
                 <p class="text-justify">
                     La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
@@ -117,8 +119,7 @@
                     la
                     construcción del capital social en Colombia.
                 </p>
-            </div>
-            <div class="col" data-aos="fade-left">
+                <br>
                 <h3 class="title text-center">Misión</h3>
                 <p class="text-justify">
                     Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
@@ -128,8 +129,95 @@
                     mejoramiento de la calidad de vida a través del empleo decente.
                 </p>
             </div>
-        </div>
 
+            <div class="col bg-dark">
+                <p class="text-uppercase title2">Políticas de Calidad</p>
+                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
+                    las
+                    necesidades y
+                    expectativas
+                    de
+                    nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
+                </p>
+
+                <h5>
+                    <strong class="text-success"> Valores corporativos:</strong>
+                </h5>
+                <ul class="list-unstyled">
+                    <li>Ayuda mutua</li>
+                    <li>Responsabilidad</li>
+                    <li>Honestidad </li>
+                    <li>Democracia</li>
+                    <li>Equidad </li>
+                    <li>Solidaridad </li>
+                    <li>Honestidad y transparencia</li>
+                </ul>
+
+                <h3 class="title2">
+                    PRINCIPIOS CORPORATIVOS
+                </h3>
+
+                <ol class="text-justify m-0">
+                    <li>
+                        Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas para
+                        todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las responsabilidades
+                        que
+                        conlleva la membresía con equidad social.
+                    </li>
+                    <li>
+                        Control democrático por los socios: Las cooperativas son organizaciones democráticas
+                        controladas
+                        por sus miembros quienes participan activamente en la definición de las políticas y en la toma
+                        de
+                        decisiones, las personas para representar la cooperativa responden ante los miembros. Donde
+                        todos
+                        tienen igual derecho de voto.
+                    </li>
+                    <li>
+                        Participación económica de los socios: Los asociados capitalizan de manera equitativa y
+                        controlan
+                        democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad común
+                        de la
+                        Cooperativa.
+                    </li>
+                    <li>
+                        Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
+                        controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
+                        gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
+                        control
+                        democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un ser
+                        que
+                        se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
+                    </li>
+                    <li>
+                        Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a sus
+                        dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
+                        desarrollo de
+                        sus cooperativas. Las cooperativas informan al público en general, particularmente a jóvenes y
+                        creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
+                    </li>
+                    <li>
+                        Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
+                        empresarial
+                        y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
+                        rigurosa de
+                        otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados más
+                        eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio de
+                        estructuras locales, nacionales e internacionales".
+                    </li>
+                    <li>
+                        Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
+                        comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas están
+                        establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
+                        éstos
+                        viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa como
+                        tal,
+                        está íntimamente ligada a su comunidad.
+                    </li>
+                </ol>
+            </div>
+
+        </div>
     </section>
 
 
@@ -157,6 +245,13 @@
 
     <!-- Scripts -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+
+    <script>
+        var scene = document.getElementById('scene');
+        var parallaxInstance = new Parallax(scene);
+        parallaxInstance.invert(false, false);
+    </script>
 </body>
 
 </html>
