--- a/acerca.html
+++ b/acerca.html
@@ -70,38 +70,41 @@
                 <!-- texto main -->
     </section>
 
-    <section id="nosotros" class="container-fluid d-flex align-items-center justify-content-center">
+    <div id="intro" class="container-fluid d-flex align-items-center justify-content-center">
 
         <div id="scene">
             <div data-depth="1" data-hover-only> <img id="logo-acerca" src="img/logo.png" alt=""></div>
         </div>
 
-    </section>
+    </div>
 
 
     <!-- Acerca de  -->
-    <section class="container-fluid">
-        <div class="row mt-4">
+    <section class="container-fluid pl-0 pr-0">
+        <div class="row">
 
-            <div class="col-12 mb-3 text-center title2 font-weight-bold">
-                <p class="text-uppercase">¿Quines somos?</p>
+            <div id="quienes" class="d-flex align-items-center justify-content-center">
+                <div class="col-lg-8">
+                    <p class="text-uppercase title2">¿Quines somos?</p>
+                    <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
+                        perteneciente al
+                        sector
+                        de la economía
+                        solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba
+                        y
+                        San
+                        Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los
+                        asociados y
+                        comunidad
+                        en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte.
+                        Asociando a
+                        personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de
+                        su
+                        trabajo.
+                        Establecido el decreto 4588 de 2006.</p>
+                </div>
             </div>
 
-            <div class="col-12">
-                <p class="text-justify green">Somos una organización sin ánimo de lucro, de interés social,
-                    perteneciente al
-                    sector
-                    de la economía
-                    solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
-                    San
-                    Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
-                    comunidad
-                    en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte.
-                    Asociando a
-                    personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su
-                    trabajo.
-                    Establecido el decreto 4588 de 2006.</p>
-            </div>
 
             <div class="col-4 green">
 
