--- a/acerca.html
+++ b/acerca.html
@@ -103,6 +103,7 @@
                         trabajo.
                         Establecido el decreto 4588 de 2006.</p>
                 </div>
+                <div class="color"></div>
             </div>
 
 
