--- a/acerca.html
+++ b/acerca.html
@@ -73,7 +73,7 @@
     <div id="intro" class="container-fluid d-flex align-items-center justify-content-center">
 
         <div id="scene">
-            <div data-depth="1" data-hover-only> <img id="logo-acerca" src="img/logo.png" alt=""></div>
+            <div data-depth=".5" data-hover-only> <img id="logo-acerca" src="img/logo.png" alt=""></div>
         </div>
 
     </div>
