--- a/acerca.html
+++ b/acerca.html
@@ -81,10 +81,10 @@
 
     <!-- Acerca de  -->
     <section class="container-fluid pl-0 pr-0">
-        <div class="row">
+        <div class="row text-dark">
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-sm-10 col-lg-8">
                     <p class="text-uppercase title2">¿Quines somos?</p>
                     <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
@@ -105,32 +105,37 @@
                 </div>
                 <div class="color"></div>
             </div>
+            <div class="row">
+                <div class="col-md-5 align-self-start">
+                    <h3 class="title text-center">Visión</h3>
+                    <p class="text-justify">
+                        La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
+                        sector de
+                        economía
+                        solidaria, que provea a
+                        los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a
+                        la
+                        construcción del capital social en Colombia.
+                    </p>
+                </div>
+    
+                <div class="w-100"></div>
+    
+                <div class="col-md-5 align-self-end">
+                    <h3 class="title text-center">Misión</h3>
+                    <p class="text-justify">
+                        Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
+                        promoviendo
+                        el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y
+                        el
+                        mejoramiento de la calidad de vida a través del empleo decente.
+                    </p>
+                </div>
 
-
-            <div class="col-4 green">
-
-                <h3 class="title text-center">Visión</h3>
-                <p class="text-justify">
-                    La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
-                    sector de
-                    economía
-                    solidaria, que provea a
-                    los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a
-                    la
-                    construcción del capital social en Colombia.
-                </p>
-                <br>
-                <h3 class="title text-center">Misión</h3>
-                <p class="text-justify">
-                    Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
-                    promoviendo
-                    el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y
-                    el
-                    mejoramiento de la calidad de vida a través del empleo decente.
-                </p>
             </div>
 
-            <div class="col bg-dark">
+            <div class="w-100"></div>
+            <div class="col">
                 <p class="text-uppercase title2">Políticas de Calidad</p>
                 <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
                     las
@@ -139,6 +144,10 @@
                     de
                     nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
                 </p>
+
+            </div>
+
+            <div class="col-12">
 
                 <h5>
                     <strong class="text-success"> Valores corporativos:</strong>
