--- a/acerca.html
+++ b/acerca.html
@@ -105,33 +105,34 @@
                 </div>
                 <div class="color"></div>
             </div>
-            <div class="row">
-                <div class="col-md-5 align-self-start">
+            <div id="mision_vision" class="row justify-content-center align-items-center">
+                <div class="col-md-5">
                     <h3 class="title text-center">Visión</h3>
                     <p class="text-justify">
-                        La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
+                        La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
+                        del
                         sector de
                         economía
                         solidaria, que provea a
-                        los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a
+                        los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y
+                        a
                         la
                         construcción del capital social en Colombia.
                     </p>
                 </div>
-    
                 <div class="w-100"></div>
-    
-                <div class="col-md-5 align-self-end">
+                <div class="col-md-5">
                     <h3 class="title text-center">Misión</h3>
                     <p class="text-justify">
-                        Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
+                        Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
+                        familias
                         promoviendo
-                        el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y
+                        el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo
+                        y
                         el
                         mejoramiento de la calidad de vida a través del empleo decente.
                     </p>
                 </div>
-
             </div>
 
             <div class="w-100"></div>
