--- a/acerca.html
+++ b/acerca.html
@@ -81,7 +81,7 @@
 
     <!-- Acerca de  -->
     <section class="container-fluid pl-0 pr-0">
-        <div class="row text-dark">
+        <div class="row text-dark justify-content-around">
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8">
@@ -105,9 +105,10 @@
                 </div>
                 <div class="color"></div>
             </div>
-            <div id="mision_vision" class="row justify-content-center align-items-center">
-                <div class="col-md-5">
-                    <h3 class="title text-center">Visión</h3>
+
+            <div id="vision" class="d-flex align-items-center justify-content-center">
+                <div class="col-md-5 text-center">
+                    <h3 class="title ">Visión</h3>
                     <p class="text-justify">
                         La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
                         del
@@ -120,9 +121,11 @@
                         construcción del capital social en Colombia.
                     </p>
                 </div>
-                <div class="w-100"></div>
-                <div class="col-md-5">
-                    <h3 class="title text-center">Misión</h3>
+            </div>
+
+            <div id="mision" class="d-flex align-items-center justify-content-center">
+                <div class="col-md-5 text-center">
+                    <h3 class="title">Misión</h3>
                     <p class="text-justify">
                         Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
                         familias
