--- a/acerca.html
+++ b/acerca.html
@@ -139,20 +139,27 @@
             </div>
 
             <div class="w-100"></div>
-            <div class="col">
-                <p class="text-uppercase title2">Políticas de Calidad</p>
-                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
-                    las
-                    necesidades y
-                    expectativas
-                    de
-                    nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
-                </p>
 
+
+            <div class="col d-flex align-items-center">
+                <div id="politica">
+                    <p class="text-uppercase t8">Políticas de Calidad</p>
+                    <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
+                        las
+                        necesidades y
+                        expectativas
+                        de
+                        nuestros asociados, sus familias y demás grupos de interés, generando creación de valor
+                        sostenible.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <img src="" alt="">
             </div>
 
             <div class="col-12">
-
                 <h5>
                     <strong class="text-success"> Valores corporativos:</strong>
                 </h5>
@@ -165,22 +172,28 @@
                     <li>Solidaridad </li>
                     <li>Honestidad y transparencia</li>
                 </ul>
+            </div>
 
+            <div class="w-100"></div>
+
+            <div class="col text-white bg-dark">
                 <h3 class="title2">
                     PRINCIPIOS CORPORATIVOS
                 </h3>
-
                 <ol class="text-justify m-0">
                     <li>
-                        Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas para
-                        todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las responsabilidades
+                        Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
+                        para
+                        todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
+                        responsabilidades
                         que
                         conlleva la membresía con equidad social.
                     </li>
                     <li>
                         Control democrático por los socios: Las cooperativas son organizaciones democráticas
                         controladas
-                        por sus miembros quienes participan activamente en la definición de las políticas y en la toma
+                        por sus miembros quienes participan activamente en la definición de las políticas y en la
+                        toma
                         de
                         decisiones, las personas para representar la cooperativa responden ante los miembros. Donde
                         todos
@@ -189,7 +202,8 @@
                     <li>
                         Participación económica de los socios: Los asociados capitalizan de manera equitativa y
                         controlan
-                        democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad común
+                        democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
+                        común
                         de la
                         Cooperativa.
                     </li>
@@ -198,15 +212,18 @@
                         controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
                         gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
                         control
-                        democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un ser
+                        democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un
+                        ser
                         que
                         se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
                     </li>
                     <li>
-                        Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a sus
+                        Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
+                        sus
                         dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
                         desarrollo de
-                        sus cooperativas. Las cooperativas informan al público en general, particularmente a jóvenes y
+                        sus cooperativas. Las cooperativas informan al público en general, particularmente a
+                        jóvenes y
                         creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
                     </li>
                     <li>
@@ -214,16 +231,20 @@
                         empresarial
                         y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
                         rigurosa de
-                        otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados más
-                        eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio de
+                        otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados
+                        más
+                        eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio
+                        de
                         estructuras locales, nacionales e internacionales".
                     </li>
                     <li>
                         Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
-                        comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas están
+                        comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
+                        están
                         establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
                         éstos
-                        viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa como
+                        viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa
+                        como
                         tal,
                         está íntimamente ligada a su comunidad.
                     </li>
