--- a/acerca.html
+++ b/acerca.html
@@ -141,9 +141,9 @@
             <div class="w-100"></div>
 
 
-            <div class="col d-flex align-items-center">
+            <div class="col-md-8 col-lg-4 d-flex align-items-center mt-5 mb-5">
                 <div id="politica">
-                    <p class="text-uppercase t8">Políticas de Calidad</p>
+                    <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
                     <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
                         las
                         necesidades y
@@ -155,8 +155,8 @@
                 </div>
             </div>
 
-            <div class="col-4">
-                <img src="" alt="">
+            <div class="col-lg-2 d-none d-lg-block">
+                <img class="img-fluid" src="img/success.jpg" alt="">
             </div>
 
             <div class="col-12">
