--- a/acerca.html
+++ b/acerca.html
@@ -140,6 +140,7 @@
 
             <div class="w-100"></div>
 
+
             <div class="col-md-8 col-lg-4 d-flex align-items-center mt-5 mb-5">
                 <div id="politica">
                     <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
@@ -158,30 +159,28 @@
                 <img class="img-fluid" src="img/success.jpg" alt="">
             </div>
 
-            <div class="w-100"></div>
-            <div class="col-12 d-flex justify-content-center align-items-center p-5">
-                <h5 class="text-center">
+            <div class="col-12">
+                <h5>
                     <strong class="text-success"> Valores corporativos:</strong>
                 </h5>
-                <div class="text-center">
-                    <p class=" tarjeta4">Ayuda mutua</p>
-                    <p class=" tarjeta4">Responsabipdad</p>
-                    <p class=" tarjeta4">Honestidad </p>
-                    <p class=" tarjeta4">Democracia</p>
-                    <p class=" tarjeta4">Equidad </p>
-                    <p class=" tarjeta4">Sopdaridad </p>
-                    <p class=" tarjeta4">Honestidad y transparencia</p>
-
-                </div>
+                <ul class="list-unstyled">
+                    <li>Ayuda mutua</li>
+                    <li>Responsabilidad</li>
+                    <li>Honestidad </li>
+                    <li>Democracia</li>
+                    <li>Equidad </li>
+                    <li>Solidaridad </li>
+                    <li>Honestidad y transparencia</li>
+                </ul>
             </div>
 
             <div class="w-100"></div>
 
-            <div class="col text-white bg-dark p-5">
+            <div class="col text-white bg-dark">
                 <h3 class="title2">
                     PRINCIPIOS CORPORATIVOS
                 </h3>
-                <ol class="text-justify">
+                <ol class="text-justify m-0">
                     <li>
                         Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
                         para
