--- a/acerca.html
+++ b/acerca.html
@@ -138,11 +138,11 @@
                 </div>
             </div>
 
-            <div class="w-100"></div>
+            <div class="w-100 mb-5"></div>
 
 
             <div class="col-md-8 col-lg-4 d-flex align-items-center mt-5 mb-5">
-                <div id="politica">
+                <div>
                     <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
                     <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
                         las
